--- a/lwjgl3/build.gradle
+++ b/lwjgl3/build.gradle
@@ -9,10 +9,17 @@ dependencies {
 	implementation "com.badlogicgames.gdx-controllers:gdx-controllers-desktop:$gdxControllersVersion"
 	implementation "com.badlogicgames.gdx:gdx-backend-lwjgl3:$gdxVersion"
 	implementation "com.badlogicgames.gdx:gdx-platform:$gdxVersion:natives-desktop"
+	api "com.badlogicgames.gdx:gdx-tools:$gdxVersion"
 	implementation project(':core')
 }
 
 def os = System.properties['os.name'].toLowerCase()
+
+task sprites(dependsOn: classes, type: JavaExec) {
+	mainClass = 'com.badlogic.gdx.tools.texturepacker.TexturePacker'
+	classpath = sourceSets.main.runtimeClasspath
+	args = ['../sprites', '../assets/sprites', 'sprites']
+}
 
 run {
 	workingDir = rootProject.file('assets').path
