--- a/html/build.gradle
+++ b/html/build.gradle
@@ -35,6 +35,10 @@ dependencies {
 	implementation "com.badlogicgames.gdx:gdx:$gdxVersion:sources"
 	implementation "space.earlygrey:shapedrawer:$shapeDrawerVersion:sources"
     implementation "com.kotcrab.vis:vis-ui:$visuiVersion:sources"
+    implementation "space.earlygrey:simple-graphs:$simpleGraphsVersion:sources"
+    implementation "com.github.tommyettinger:regexodus:$regexodusVersion:sources"
+    implementation "org.mini2Dx:universal-tween-engine:$tweenEngineVersion:sources"
+    implementation "com.github.raeleus.TenPatch:tenpatch:$tenpatchVersion:sources"
     implementation project(':core')
 
 //// You can use the lines below instead of the "com.badlogicgames.gdx:gdx-backend-gwt" dependencies.
