Fix String.format missing in GWT with formic lib

--- a/gradle.properties
+++ b/gradle.properties
@@ -8,6 +8,7 @@ simpleGraphsVersion=3.0.0
 shapeDrawerVersion=2.5.0
 tweenEngineVersion=6.3.3
 visuiVersion=1.5.0
+formicVersion=0.1.4
 regexodusVersion=0.1.13
 tenpatchVersion=5.2.3
 gdxVersion=1.10.0
