--- a/core/build.gradle
+++ b/core/build.gradle
@@ -8,6 +8,7 @@ dependencies {
 	api "space.earlygrey:simple-graphs:$simpleGraphsVersion"
 	api "com.github.tommyettinger:regexodus:$regexodusVersion"
 	api "org.mini2Dx:universal-tween-engine:$tweenEngineVersion"
+	api "com.github.tommyettinger:formic:$formicVersion"
 	implementation "com.kotcrab.vis:vis-ui:$visuiVersion"
 	implementation "com.github.raeleus.TenPatch:tenpatch:$tenpatchVersion"
 }
