--- a/html/build.gradle
+++ b/html/build.gradle
@@ -39,6 +39,7 @@ dependencies {
     implementation "com.github.tommyettinger:regexodus:$regexodusVersion:sources"
     implementation "org.mini2Dx:universal-tween-engine:$tweenEngineVersion:sources"
     implementation "com.github.raeleus.TenPatch:tenpatch:$tenpatchVersion:sources"
+    implementation "com.github.tommyettinger:formic:$formicVersion:sources"
     implementation project(':core')
 
 //// You can use the lines below instead of the "com.badlogicgames.gdx:gdx-backend-gwt" dependencies.
